# vanish

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  vanish.md
.codemeter/: ai_interactions.jsonl  ai_interactions.snapshot.json  projects.jsonl  projects.snapshot.json  sessions.jsonl
.github/workflows/: publish.yml  python-app.yml  release.yml
Formula/: vanish.rb
jhadoo/: __init__.py  cli.py  config.py  core.py  scheduler.py  telemetry.py
server_function/: main.py
tests/: __init__.py  test_basic.py  test_cli.py  test_core.py  test_docker_tools.py  test_gamification.py  test_git_tools.py  test_junk_score.py  test_messages.py  test_plugins.py  test_restore.py  test_scheduler.py  test_sounds.py  test_telemetry.py
vanish/: __init__.py  __main__.py  cli.py  config.py  core.py  gamification.py  health.py  junk_score.py  messages.py  notifications.py  plugins.py  scheduler.py  sounds.py  telemetry.py  trash.py  tui.py  watch.py
vanish/utils/: __init__.py  os_compat.py  progress.py  safety.py
